--- a/AINoval/pubspec.yaml
+++ b/AINoval/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_client_sse: ^2.0.3
   cupertino_icons: ^1.0.2
   get_it: ^7.6.7 # 使用最新版本
 
