添加阿里云OSS支持，更新依赖，重构存储仓库实现，优化上传逻辑

--- a/AINoval/pubspec.yaml
+++ b/AINoval/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_markdown: ^0.6.17
   dio: ^5.4.0
   logging: ^1.2.0
+  # 阿里云OSS
+  flutter_oss_aliyun: ^6.4.2
   # 国际化
   flutter_localizations:
     sdk: flutter
