优化配置和事件处理，添加停止场景生成功能，更新API路径，移除冗余安全配置

--- a/AINovalServer/src/main/resources/application.yml
+++ b/AINovalServer/src/main/resources/application.yml
@@ -5,6 +5,9 @@ server:
     connection-timeout: 5s
 
 spring:
+  main:
+    allow-bean-definition-overriding: true
+    allow-circular-references: true
   application:
     name: ai-novel-server
   data:
