--- a/AINoval/pubspec.yaml
+++ b/AINoval/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   bloc_concurrency: ^0.2.5
+  provider: ^6.1.2
 
   # 本地存储
   hive: ^2.2.3
