增加编辑器设置，调整行高和启用粘性滚动功能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "java.debug.settings.onBuildFailureProceed": true,
     "java.compile.nullAnalysis.mode": "automatic",
+    "editor.lineHeight": 15,
+    "editor.stickyScroll.enabled": true,
     "jdk.advanced.disable.nbjavac": false
 }
