更新依赖项并优化UI组件
- 在pubspec.yaml中添加了animated_text_kit和flutter_lucide依赖项。
- 在outline_generation_config_card.dart中使用flutter_lucide图标替换了部分Material图标。
- 在result_card.dart中引入animated_text_kit以实现动态文本效果。
- 在results_grid.dart中使用flutter_lucide图标替换了多个Material图标，提升了界面一致性和美观性。

--- a/AINoval/pubspec.yaml
+++ b/AINoval/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_client_sse: ^2.0.3
+  flutter_lucide: ^1.6.2
+  animated_text_kit: ^4.2.2
   cupertino_icons: ^1.0.2
   get_it: ^7.6.7 # 使用最新版本
 
