新增RabbitMQ支持，包含RabbitMQ配置类、任务消息生产者和任务提交服务实现。更新pom.xml以添加Spring AMQP依赖，配置application.yml以设置RabbitMQ连接参数。实现任务消息的发送和重试机制，增强后台任务系统的消息处理能力。

--- a/AINovalServer/pom.xml
+++ b/AINovalServer/pom.xml
@@ -258,6 +258,19 @@
             <artifactId>spring-context-support</artifactId>
         </dependency>
         
+        <!-- Spring AMQP & RabbitMQ -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        
+        <!-- Java 延迟队列支持 (用于任务重试) -->
+        <dependency>
+            <groupId>net.jodah</groupId>
+            <artifactId>expiringmap</artifactId>
+            <version>0.5.11</version>
+        </dependency>
+        
     </dependencies>
     
     <build>
