新增限流服务及相关配置，包含内存和Redis实现。更新pom.xml以添加Google Guava和Resilience4j依赖。实现优雅停机配置，确保应用关闭时不丢失消息。新增日志和指标监控配置，增强系统可观测性。更新application.yml以支持限流器配置。

--- a/AINovalServer/pom.xml
+++ b/AINovalServer/pom.xml
@@ -271,6 +271,25 @@
             <version>0.5.11</version>
         </dependency>
         
+        <!-- Google Guava库 (用于限流服务) -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.0.0-jre</version>
+        </dependency>
+        
+        <!-- Resilience4j (用于限流服务) -->
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-ratelimiter</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-core</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+        
     </dependencies>
     
     <build>
