--- a/AINovalServer/src/main/resources/application.yml
+++ b/AINovalServer/src/main/resources/application.yml
@@ -147,4 +147,78 @@ jasypt:
     algorithm: PBEWITHHMACSHA512ANDAES_256
     iv-generator-classname: org.jasypt.iv.RandomIvGenerator
 
+# 限流器配置
+task:
+  # 限流配置
+  ratelimiter:
+    # 限流器类型: memory (基于内存) 或 redis (分布式)
+    type: memory
+    # 默认限流配置
+    default:
+      # 每秒许可数量 (QPS)
+      rate: 10.0
+      # 突发容量 (令牌桶最大容量)
+      burstCapacity: 20
+      # 获取许可的默认超时时间(毫秒)
+      defaultTimeoutMillis: 5000
+    # 各AI提供商或模型的特定限流配置
+    providers:
+      openai:
+        rate: 5.0
+        burstCapacity: 10
+        defaultTimeoutMillis: 3000
+      anthropic:
+        rate: 3.0
+        burstCapacity: 6
+        defaultTimeoutMillis: 3000
+      gpt-4:
+        rate: 2.0
+        burstCapacity: 4
+        defaultTimeoutMillis: 10000
+  # 重试配置
+  retry:
+    maxAttempts: 5
+    initialDelayMillis: 5000
+    maxDelayMillis: 3600000 # 1 hour
+    backoffFactor: 2.0
+    jitterFactor: 0.1
+  # 关闭配置
+  shutdown:
+    awaitTerminationTimeout: PT30S # ISO-8601 duration
+
+# Micrometer配置
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus,metrics
+  endpoint:
+    health:
+      show-details: when_authorized
+    prometheus:
+      enabled: true
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+    distribution:
+      percentiles-histogram:
+        "[tasks.execution.time]": true
+      percentiles:
+        "[tasks.execution.time]": [0.5, 0.95, 0.99]
+      slo:
+        "[tasks.execution.time]": [1000, 5000, 10000]
+
+# 日志配置
+logging:
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} %highlight(%-5level) [%X{traceId:-}] [%X{userId:-}] [%thread] %logger{36} - %msg%n"
+  level:
+    root: INFO
+    com.ainovel: DEBUG
+    com.ainovel.server.task: INFO
+    org.springframework.web: INFO
+    org.springframework.amqp: INFO
+  request: true
+
 
