新增Micrometer上下文传播依赖，更新pom.xml以支持反应式MDC。新增修复总结文档，概述响应式版本重构的关键问题和建议。更新多个配置类以支持反应式编程，优化任务执行器和状态聚合器的实现，增强系统的可维护性和可观测性。

--- a/AINovalServer/pom.xml
+++ b/AINovalServer/pom.xml
@@ -100,6 +100,12 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
+
+        <!-- Micrometer Context Propagation (for Reactor MDC) -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>context-propagation</artifactId>
+        </dependency>
         
         <!-- AspectJ support for @Timed annotation -->
         <dependency>
