--- a/AINoval/pubspec.yaml
+++ b/AINoval/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   fluttertoast: ^8.2.5 # Use the latest version
   flutter_portal: ^1.1.4 # 或者最新兼容版本
   firebase_core: ^3.13.0
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   flutter_test:
