新增设定生成策略，支持基于提示词和结构化输出的设定生成。更新PromptService以提供新的提示词模板，优化NovelAIServiceImpl以集成新的生成策略。重构相关接口和数据传输对象，确保生成的设定项符合JSON格式要求。更新文档以反映新功能的实现细节。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,10 @@
 {
-    "java.debug.settings.onBuildFailureProceed": true,
-    "java.compile.nullAnalysis.mode": "automatic",
     "editor.lineHeight": 15,
     "editor.stickyScroll.enabled": true,
     "http.proxy": "http://127.0.0.1:6888",
     "https.proxy": "http://127.0.0.1:6888",
-    "jdk.advanced.disable.nbjavac": false
-    "jdk.advanced.disable.nbjavac": false,
     "IDX.aI.enableInlineCompletion": true,
-    "IDX.aI.enableCodebaseIndexing": true
+    "IDX.aI.enableCodebaseIndexing": true,
+    "java.dependency.syncWithFolderExplorer": false,
+    "java.compile.nullAnalysis.mode": "automatic"
 }
