新增场景生成相关事件处理逻辑，包括流式生成和非流式生成的实现，优化了生成内容的更新和状态管理。同时，更新编辑器组件以支持新的场景生成面板，增强用户体验。更新相关文档以反映新功能的实现细节。

--- a/AINovalServer/pom.xml
+++ b/AINovalServer/pom.xml
@@ -35,7 +35,11 @@
             <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
             <version>2.6.0</version> <!-- Use a recent compatible version -->
         </dependency>
-        
+        <dependency>
+            <groupId>org.mantoux</groupId>
+            <artifactId>quill-delta</artifactId>
+            <version>1.6.3</version>
+        </dependency>
         <!-- Spring Data MongoDB Reactive -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
